--- a/tasky-api/package.json
+++ b/tasky-api/package.json
@@ -18,8 +18,10 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.9.3",
     "uuid": "^11.0.3"
   }
